Fix a bunch of issues
Signed-off-by: dubo-dubon-duponey <dubodubonduponey+github@pm.me>